--- a/views/list-profile.html
+++ b/views/list-profile.html
@@ -21,8 +21,9 @@
 					>Full Name</option>
 		        </select>
 	      	</div>
-
-			<input type="text" class="form-control searchInput" placeholder="Search..." value="{{value}}">
+			<div class="form-group label-floating custom-form-group">
+				<input type="text" class="form-control searchInput" placeholder="Search..." value="{{value}}">
+			</div>
 			<span class="input-group-btn">
 				<button class="btn btn-default searchButton" type="button">
 					<i class="fa fa-search"></i>
