--- a/views/list-profile.html
+++ b/views/list-profile.html
@@ -49,7 +49,7 @@
 		<tr class="custom-list">
 			<td>{{ profile.id }}</td>
 			<td>{{ profile.username }}</td>
-			<td><a href="/profile/{{ profile.credentialId }}">{{ profile.fullname }}</a></td>
+			<td><a href="/profile/{{ profile.credentialId }}" class="show-profile">{{ profile.fullname }}</a></td>
 			<td>{{ profile.email }}</td>
 			<td>{{ profile.address }}</td>
 		</tr>
