fix show user name

--- a/views/_layout.html
+++ b/views/_layout.html
@@ -15,7 +15,7 @@
     {% if user %}
     <nav class="navbar transparent navbar-fixed-top custom-nav">
         <ul class="nav navbar-nav navbar-right logout">
-            <li><a href="/profile"><i class="username logout-text"><span>{{profile.fullname}}</span></i></a></li>
+            <li><a href="/profile" class="name-show"><i class="username logout-text"><span>{{profile.fullname}}</span></i></a></li>
             <li><a href="/logout" class="logout-text">
                 <span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
         </ul>
